# travagency

./: .replit  README.md  app.py  config.py  models.py  pyproject.toml  routes.py
static/css/: style.css
templates/: base.html  index.html  profile.html  signin.html  signup.html
templates/includes/: _footer.html  _navbar.html
travency/: __init__.py  forms.py  models.py  routes.py
travency/static/css/: style.css
travency/templates/: about.html  admission.html  base.html  contact.html  index.html  my_uploads.html  profile.html  signin.html  signup.html
travency/templates/includes/: _footer.html  _messages.html  _navbar.html
