


[tool.poetry]
name = "travency"
version = "0.1.0"
description = "Agency Site"
authors = ["D Solomon K Youhn <doumbouyah3792@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-login = "^0.6.3"
werkzeug = "^3.1.3"
flask-wtf = "^1.2.2"
wtforms = "^3.2.1"
email-validator = "^2.2.0"
flask-mail = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



